--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -294,8 +294,9 @@ button {
 
 
 #searchForm {
+    position: relative;
+    z-index: 1;
     height: 100px;
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -313,7 +314,6 @@ button {
     padding: 0.925rem 3rem;
     border-radius: 0.375rem;
     border: 0.0625rem solid #ffffff;
-    z-index: 2;
 }
 
 #searchForm .label.person {
