--- a/src/main/resources/static/css/payment/read.css
+++ b/src/main/resources/static/css/payment/read.css
@@ -84,10 +84,9 @@
     border-bottom: #9c9c9c 0.0625rem solid;
 }
 
-.info .bold {
+.info .text.bold {
     display: inline-block;
     width: 10rem;
-    font-weight: 500;
 }
 
 .info li {
@@ -115,29 +114,53 @@
 
 .user-info {
     border: 0.0625rem solid #9c9c9c;
+    border-radius: 10px;
+    padding: 1rem;
     margin-top: 1.25rem;
     margin-bottom: 3rem;
     width: 800px;
     height: 200px;
 }
 
+.user-info li {
+    margin-bottom: 0.5rem;
+}
+
+.user-info .text {
+    display: inline-block;
+    width: 5rem;
+}
+
 .pay-method-container {
     padding: 1.25rem;
     border: 0.0625rem solid #9c9c9c;
+    border-radius: 10px;
     margin-top: 1.25rem;
     width: 800px;
-    height: 200px;
 }
 
 .price-container {
     border: 0.0625rem solid #9c9c9c;
+    border-radius: 10px;
+    padding: 1rem;
     margin-top: 1.25rem;
-    width: 300px;
-    height: 400px;
+    width: 200px;
+}
+
+.price-text-container {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+}
+
+.price {
+    font-size: 1.2rem;
 }
 
 .pay-button {
-    width: 80px;
+    width: 100%;
     height: 50px;
     background-color: #9c9c9c;
     border-radius: 10px;
