--- a/src/main/resources/templates/admin/inquiryList.html
+++ b/src/main/resources/templates/admin/inquiryList.html
@@ -31,7 +31,7 @@
                 <div class="title-container">
                     <h1 class="title">고객문의 > 1:1 문의 내역</h1>
                 </div>
-                    <div id="main_wrapper">
+                    <div>
                         <form id="search_Form">
                             <div class="search">
                                 <input hidden type="text" th:value="${type}" class="type">
