--- a/src/main/resources/templates/hotelInfo/history.html
+++ b/src/main/resources/templates/hotelInfo/history.html
@@ -39,7 +39,7 @@
                 <div class="title-container">
                     <h1 class="title">호텔 소개 > 연혁</h1>
                 </div>
-
+                <div class="history-box">연혁</div>
             </div>
         </div>
     </div>
