--- a/src/main/resources/templates/policy/terms.html
+++ b/src/main/resources/templates/policy/terms.html
@@ -28,7 +28,7 @@
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
-        <h1 class="title">개인정보 처리방침</h1>
+        <h1 class="title">이용약관</h1>
         <div class="terms-container">
             <ul class="terms">
                 <li class="item">
