--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -57,6 +57,10 @@ button {
     flex: 1;
 }
 
+.bold {
+    font-weight: 500;
+}
+
 #hotelList {
     top: 0;
     left: 0;
@@ -398,7 +402,7 @@ button {
     justify-content: space-between;
 }
 
-.admin-container h1 {
+.admin-container .title {
     font-size: 2rem;
     font-weight: 500;
     margin-bottom: 0.5rem;
