--- a/src/main/resources/templates/hotelInfo/award.html
+++ b/src/main/resources/templates/hotelInfo/award.html
@@ -39,6 +39,7 @@
                 <div class="title-container">
                     <h1 class="title">호텔 소개 > 수상 이력</h1>
                 </div>
+                <div class="award-box">수상 이력</div>
             </div>
         </div>
     </div>
