--- a/src/main/resources/templates/admin/modifyHotel.html
+++ b/src/main/resources/templates/admin/modifyHotel.html
@@ -68,7 +68,7 @@
                             </div>
 
                             <div class="hotel-image-container">
-                                <span class="text hotel-image">객실 이미지</span>
+                                <span class="text hotel-image">호텔 이미지</span>
                                 <div class="hotel-img">
                                     <div class="upload-box hotel-upload-box">
                                         <div class="plus">+</div>
