html, js 중복 코드 제거 및 보기 어려운 코드 수정

--- a/src/main/resources/static/css/admin/modifyRoom.css
+++ b/src/main/resources/static/css/admin/modifyRoom.css
@@ -10,20 +10,13 @@
 }
 
 .modify-room-container {
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.room_img_block {
+.room-img-section {
     width: 500px;
-}
-
-.room_img {
-    width: 100%;
-    height: 250px;
-    position: relative;
 }
 
 .upload-box {
@@ -61,13 +54,6 @@
     top: -5%;
 }
 
-.preview_img_block {
-    width: 100%;
-    position: relative;
-    top: 10px;
-    margin-bottom: 4rem;
-}
-
 .preview {
     width: 100%;
     height: 200px;
@@ -84,7 +70,7 @@
     overflow: auto hidden;
 }
 
-.preview_img_block .item {
+.preview .item {
     border: 0.0625rem solid #4a4a4a;
     margin: 0 0.5rem;
     padding: 0.5rem;
@@ -96,7 +82,7 @@
     align-items: center;
 }
 
-.preview_img_block .delete-btn {
+.preview .delete-btn {
     margin-left: 0.5rem;
     white-space: nowrap;
 }
@@ -106,15 +92,15 @@
     height: 150px;
 }
 
-.room_info_block {
+.room-info-section {
     width: 300px;
     position: relative;
 }
 
-.room_info_block > form > * {
+.room-info-section > form > * {
     margin-bottom: 20px;
 }
 
-.room_info_block label {
+.room-info-section label {
     margin: 5px 0;
 }
