--- a/src/main/resources/static/css/admin/modifyHotel.css
+++ b/src/main/resources/static/css/admin/modifyHotel.css
@@ -16,15 +16,10 @@
     justify-content: space-between;
 }
 
-.hotel_img_block {
+.hotel-img-section {
     width: 400px;
 }
 
-.hotel_img{
-    width : 100%;
-    height: 250px;
-    position: relative;
-}
 .upload-box {
     width: 100%;
     height : 100%;
@@ -59,13 +54,6 @@
     top:-5%;
 }
 
-.preview_img_block{
-    width: 100%;
-    position: relative;
-    top: 10px;
-    margin-bottom: 4rem;
-}
-
 .preview {
     width : 100%;
     height : 200px;
@@ -82,7 +70,7 @@
     overflow: auto hidden;
 }
 
-.preview_img_block .item {
+.preview .item {
     border: 0.0625rem solid #4a4a4a;
     margin: 0 0.5rem;
     padding: 0.5rem;
@@ -94,7 +82,7 @@
     align-items: center;
 }
 
-.preview_img_block .delete-btn {
+.preview .delete-btn {
     margin-left: 0.5rem;
     white-space: nowrap;
 }
@@ -104,15 +92,15 @@
     height: 150px;
 }
 
-.hotel_info_block{
+.hotel-info-section{
     width: 400px;
     position: relative;
 }
 
-.hotel_info_block>form>*{
+.hotel-info-section>form>*{
     margin-bottom:20px;
 }
 
-.hotel_info_block label{
+.hotel-info-section label{
     margin:5px 0;
 }
