--- a/src/main/resources/templates/admin/modifyHotel.html
+++ b/src/main/resources/templates/admin/modifyHotel.html
@@ -31,77 +31,72 @@
                 <div class="title-container">
                     <h1 class="title">호텔 관리 > 호텔 수정 및 삭제</h1>
                 </div>
-                <div th:if="${hotelName == null}">
+                <th:block th:if="${hotelName == null}">
                     <label>
-                        <span class="text">호텔을 선택해 주세요</span>
-                        <select class="form-select hotel-list">
+                        <span>호텔을 선택해 주세요</span>
+                        <select class="form-select" id="hotelSelect">
                             <th:block th:each="hotel : ${hotelList}">
                                 <option th:value="${hotel}" th:text="${hotel}"></option>
                             </th:block>
                         </select>
                     </label>
                     <div>
-                        <button class="btn btn-primary select-hotel-btn w-100" onclick=selectedHotel()>확인</button>
+                        <button class="btn btn-primary select-hotel-btn w-100" onclick = selectHotel()>확인</button>
                     </div>
-                </div>
+                </th:block>
 
-                <div th:if="${hotelName != null}">
+                <th:block th:if="${hotelName != null}">
                     <div class="modify-hotel-container">
-                        <section class="hotel_img_block">
-                            <div class="main-image-container">
-                                <span class="text">대표 이미지</span>
-                                <div class="main-img">
-                                    <div class="upload-box main-upload-box" >
-                                        <div class="plus">+</div>
-                                    </div>
+                        <section class="hotel-img-section">
+                            <div>
+                                <span>대표 이미지</span>
+                                <div class="upload-box" id="mainUploadBox">
+                                    <div class="plus">+</div>
                                 </div>
-                                <div class="preview_img_block">
-                                    <label>PREVIEW</label>
-                                    <ul class="preview" id="mainPreview">
-                                        <li class="item">
-                                            <input hidden type="text" class="existing-file-name existing-main-file-name" name="existingMainFileName" th:value="${hotelMainFile.fileName}">
-                                            <img class="img" th:src="@{${hotelMainFile.dir} + ${hotelMainFile.fileName}}" alt="">
-                                            <a class="btn btn-secondary delete-btn">삭제</a>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <span>PREVIEW</span>
+                                <ul class="preview" id="mainPreview">
+                                    <li class="item">
+                                        <input hidden type="text" class="existing-file-name" id="existingMainFileName"
+                                               th:value="${hotelMainFile.fileName}">
+                                        <img th:src="@{${hotelMainFile.dir} + ${hotelMainFile.fileName}}" alt="">
+                                        <a class="btn btn-secondary delete-btn">삭제</a>
+                                    </li>
+                                </ul>
                             </div>
-
-                            <div class="hotel-image-container">
-                                <span class="text hotel-image">호텔 이미지</span>
-                                <div class="hotel-img">
-                                    <div class="upload-box hotel-upload-box">
-                                        <div class="plus">+</div>
-                                    </div>
+                            <div>
+                                <span>추가 이미지</span>
+                                <div class="upload-box" id="additionalUploadBox">
+                                    <div class="plus">+</div>
                                 </div>
-                                <div class="preview_img_block">
-                                    <label>PREVIEW</label>
-                                    <ul class="preview" id="hotelPreview">
-                                        <li class="item" th:each="file : ${hotelFileList}">
-                                            <input hidden type="text" class="existing-file-name" name="existingFileName" th:value="${file.fileName}">
-                                            <img class="img" th:src="@{${file.dir} + ${file.fileName}}" alt="">
-                                            <a class="btn btn-secondary delete-btn">삭제</a>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <span>PREVIEW</span>
+                                <ul class="preview" id="additionalPreview">
+                                    <li class="item" th:each="file : ${hotelFileList}">
+                                        <input hidden type="text" class="existing-file-name" id="existingAdditionalFileName"
+                                               th:value="${file.fileName}">
+                                        <img th:src="@{${file.dir} + ${file.fileName}}" alt="">
+                                        <a class="btn btn-secondary delete-btn">삭제</a>
+                                    </li>
+                                </ul>
                             </div>
                         </section>
 
-                        <section class="hotel_info_block">
-                            <form class="hotel-form" id="hotelForm">
+                        <section class="hotel-info-section">
+                            <form id="modifyHotelForm">
                                 <div>
                                     <label>호텔 이름</label>
-                                    <input disabled name="hotelName" class="form-control" th:value="${hotel.hotelName}" required>
+                                    <input disabled name="hotelName" class="form-control" th:value="${hotel.hotelName}"
+                                           required>
                                 </div>
                                 <div>
-                                    <input hidden name="region" id="region" class="form-control" th:value="${hotel.region}" type="text">
+                                    <input hidden name="region" id="region" class="form-control"
+                                           th:value="${hotel.region}" type="text">
                                 </div>
                                 <div>
                                     <div>
                                         <label>우편번호</label>
                                         <div class="row-container">
                                             <input disabled class="form-control" name="zipcode" id="zipcode"
-                                                  th:value="${hotel.zipcode}"/>
+                                                   th:value="${hotel.zipcode}"/>
                                             <a onclick="AddressSearch()" class="btn btn-secondary search-addr-btn">우편번호
                                                 찾기</a>
                                         </div>
@@ -112,7 +107,8 @@
                                     </div>
                                     <div>
                                         <label>상세주소</label>
-                                        <input class="form-control" name="addr2" id="addr2" placeholder="상세 주소" th:value="${hotel.addr2}">
+                                        <input class="form-control" name="addr2" id="addr2" placeholder="상세 주소"
+                                               th:value="${hotel.addr2}">
                                     </div>
                                 </div>
                                 <div>
@@ -125,13 +121,13 @@
                                     <input name="hotelDetails" class="form-control" th:value="${hotel.hotelDetails}">
                                 </div>
                                 <div>
-                                    <button class="btn btn-primary modify_hotel_btn w-100">수정</button>
-                                    <button class="btn btn-primary delete_hotel_btn w-100">삭제</button>
+                                    <button class="btn btn-primary w-100" name="modifyHotelBtn">수정</button>
+                                    <button class="btn btn-primary w-100" name="deleteHotelBtn">삭제</button>
                                 </div>
                             </form>
                         </section>
                     </div>
-                </div>
+                </th:block>
             </div>
         </div>
     </div>
