--- a/src/main/resources/templates/admin/modifyRoom.html
+++ b/src/main/resources/templates/admin/modifyRoom.html
@@ -31,135 +31,143 @@
                 <div class="title-container">
                     <h1 class="title">호텔 관리 > 객실 수정 및 삭제</h1>
                 </div>
-                <div th:if="${hotelName == null}">
+                <th:block th:if="${hotelName == null}">
                     <label>
                         <span class="text">호텔을 선택해 주세요</span>
-                        <select class="form-select hotel-list">
+                        <select class="form-select" id="hotelSelect">
                             <th:block th:each="hotel : ${hotelList}">
                                 <option th:value="${hotel}" th:text="${hotel}"></option>
                             </th:block>
                         </select>
                     </label>
                     <div>
-                        <button class="btn btn-primary select-hotel-btn w-100" onclick = selectedHotel()>확인</button>
+                        <button class="btn btn-primary w-100" onclick=selectHotel()>확인</button>
                     </div>
-                </div>
+                </th:block>
 
-                <div th:if="${hotelName != null and roomKind == null}">
+                <th:block th:if="${hotelName != null and roomKind == null}">
                     <label>
                         <span class="text">객실을 선택해 주세요</span>
-                        <select class="form-select room-list">
+                        <select class="form-select" id="roomSelect">
                             <th:block th:each="room : ${roomList}">
                                 <option th:value="${room}" th:text="${room}"></option>
                             </th:block>
                         </select>
                     </label>
                     <div>
-                        <button class="btn btn-primary select-hotel-btn w-100" onclick = selectedRoom()>확인</button>
+                        <button class="btn btn-primary w-100" onclick=selectRoom()>확인</button>
                     </div>
-                </div>
+                </th:block>
 
-                <div th:if="${hotelName != null && roomKind != null}">
-                    <input hidden class="room-id" type="text" th:value="${roomMainFile.room.id}">
+                <th:block th:if="${hotelName != null && roomKind != null}">
                     <div class="modify-room-container">
-                        <section class="room_img_block">
-                            <div class="main-image-container">
-                                <span class="text">대표 이미지</span>
-                                <div class="main-img">
-                                    <div class="upload-box main-upload-box" >
-                                        <div class="plus">+</div>
-                                    </div>
+                        <section class="room-img-section">
+                            <div>
+                                <span>대표 이미지</span>
+                                <div class="upload-box" id="mainUploadBox">
+                                    <div class="plus">+</div>
                                 </div>
-                                <div class="preview_img_block">
-                                    <label>PREVIEW</label>
-                                    <ul class="preview" id="mainPreview">
-                                        <li class="item">
-                                            <input hidden type="text" class="existing-file-name existing-main-file-name" name="existingMainFileName" th:value="${roomMainFile.fileName}">
-                                            <img class="img" th:src="@{${roomMainFile.dir} + ${roomMainFile.fileName}}" alt="">
-                                            <a class="btn btn-secondary delete-btn">삭제</a>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <span>PREVIEW</span>
+                                <ul class="preview" id="mainPreview">
+                                    <li class="item">
+                                        <input hidden type="text" class="existing-file-name" id="existingMainFileName"
+                                               th:value="${roomMainFile.fileName}">
+                                        <img th:src="@{${roomMainFile.dir} + ${roomMainFile.fileName}}"
+                                             alt="">
+                                        <a class="btn btn-secondary delete-btn">삭제</a>
+                                    </li>
+                                </ul>
                             </div>
-
-                            <div class="room-image-container">
-                                <span class="text room-image">객실 이미지</span>
-                                <div class="room-img">
-                                    <div class="upload-box room-upload-box">
-                                        <div class="plus">+</div>
-                                    </div>
+                            <div>
+                                <span>추가 이미지</span>
+                                <div class="upload-box" id="additionalUploadBox">
+                                    <div class="plus">+</div>
                                 </div>
-                                <div class="preview_img_block">
-                                    <label>PREVIEW</label>
-                                    <ul class="preview" id="roomPreview">
-                                        <li class="item" th:each="file : ${roomFileList}">
-                                            <input hidden type="text" class="existing-file-name" name="existingFileName" th:value="${file.fileName}">
-                                            <img class="img" th:src="@{${file.dir} + ${file.fileName}}" alt="">
-                                            <a class="btn btn-secondary delete-btn">삭제</a>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <span>PREVIEW</span>
+                                <ul class="preview" id="additionalPreview">
+                                    <li class="item" th:each="file : ${roomFileList}">
+                                        <input hidden type="text" class="existing-file-name" id="existingAdditionalFileName"
+                                               th:value="${file.fileName}">
+                                        <img th:src="@{${file.dir} + ${file.fileName}}" alt="">
+                                        <a class="btn btn-secondary delete-btn">삭제</a>
+                                    </li>
+                                </ul>
                             </div>
                         </section>
 
-                        <section class="room_info_block">
-                            <form class="room-form" id="roomForm">
-                                <input hidden name="existingKind" class="form-control" th:value="${roomMainFile.room.kind}" required>
+                        <section class="room-info-section">
+                            <form id="modifyRoomForm">
+                                <input hidden name="roomId" type="text" th:value="${roomMainFile.room.id}">
+                                <input hidden name="currentKind" class="form-control"
+                                       th:value="${roomMainFile.room.kind}" required>
                                 <label>객실 종류</label>
                                 <div class="row-container">
-                                    <input name="kind" class="form-control" th:value="${roomMainFile.room.kind}" required>
-                                    <a onclick="confirmDuplication()" class="btn btn-secondary confirm-duplication-btn">중복 확인</a>
+                                    <input name="kind" class="form-control" th:value="${roomMainFile.room.kind}"
+                                           required>
+                                    <a onclick="confirmDuplication()" class="btn btn-secondary confirm-duplication-btn">중복
+                                        확인</a>
                                 </div>
                                 <div>
                                     <label>체크인</label>
                                     <div class="row-container">
-                                        <input name="checkinHour" class="form-control" th:value="${checkinHour}" type="text"
+                                        <input name="checkinHour" class="form-control" th:value="${checkinHour}"
+                                               type="text"
                                                required> :
-                                        <input name="checkinMinute" class="form-control" th:value="${checkinMinute}" type="text"
+                                        <input name="checkinMinute" class="form-control" th:value="${checkinMinute}"
+                                               type="text"
                                                required>
                                     </div>
                                 </div>
                                 <div>
                                     <label>체크아웃</label>
                                     <div class="row-container">
-                                        <input name="checkoutHour" class="form-control" th:value="${checkoutHour}" type="text"
+                                        <input name="checkoutHour" class="form-control" th:value="${checkoutHour}"
+                                               type="text"
                                                required> :
-                                        <input name="checkoutMinute" class="form-control" th:value="${checkoutMinute}" type="text"
+                                        <input name="checkoutMinute" class="form-control" th:value="${checkoutMinute}"
+                                               type="text"
                                                required>
                                     </div>
                                 </div>
                                 <div>
                                     <label>금요일 가격</label>
-                                    <input name="fridayPrice" class="form-control" th:value="${roomMainFile.room.fridayPrice}" required>
+                                    <input name="fridayPrice" class="form-control"
+                                           th:value="${roomMainFile.room.fridayPrice}" required>
                                 </div>
                                 <div>
                                     <label>토요일 가격</label>
-                                    <input name="saturdayPrice" class="form-control" th:value="${roomMainFile.room.saturdayPrice}" required>
+                                    <input name="saturdayPrice" class="form-control"
+                                           th:value="${roomMainFile.room.saturdayPrice}" required>
                                 </div>
                                 <div>
                                     <label>주중 가격</label>
-                                    <input name="weekdayPrice" class="form-control" th:value="${roomMainFile.room.weekdayPrice}" required>
+                                    <input name="weekdayPrice" class="form-control"
+                                           th:value="${roomMainFile.room.weekdayPrice}" required>
                                 </div>
                                 <div>
                                     <label>기준 인원</label>
-                                    <input name="standardPeople" class="form-control" th:value="${roomMainFile.room.standardPeople}" required>
+                                    <input name="standardPeople" class="form-control"
+                                           th:value="${roomMainFile.room.standardPeople}" required>
                                 </div>
                                 <div>
                                     <label>최대 인원</label>
-                                    <input name="maximumPeople" class="form-control" th:value="${roomMainFile.room.maximumPeople}" required>
+                                    <input name="maximumPeople" class="form-control"
+                                           th:value="${roomMainFile.room.maximumPeople}" required>
                                 </div>
                                 <div>
                                     <label>객실 개수</label>
-                                    <input name="count" class="form-control" th:value="${roomMainFile.room.count}" required>
+                                    <input name="count" class="form-control" th:value="${roomMainFile.room.count}"
+                                           required>
                                 </div>
                                 <div>
-                                    <button class="btn btn-primary modify_room_btn w-100">수정</button>
-                                    <button class="btn btn-primary delete_room_btn w-100">삭제</button>
+                                    <button class="btn btn-primary w-100"
+                                    name="modifyRoomBtn">수정</button>
+                                    <button class="btn btn-primary w-100" name="deleteRoomBtn">삭제</button>
                                 </div>
                             </form>
                         </section>
                     </div>
-                </div>
+                </th:block>
             </div>
         </div>
     </div>
