--- a/src/main/resources/templates/admin/modifyRoom.html
+++ b/src/main/resources/templates/admin/modifyRoom.html
@@ -31,143 +31,137 @@
                 <div class="title-container">
                     <h1 class="title">호텔 관리 > 객실 수정 및 삭제</h1>
                 </div>
-                <th:block th:if="${hotelName == null}">
-                    <label>
-                        <span class="text">호텔을 선택해 주세요</span>
-                        <select class="form-select" id="hotelSelect">
-                            <th:block th:each="hotel : ${hotelList}">
-                                <option th:value="${hotel}" th:text="${hotel}"></option>
-                            </th:block>
-                        </select>
-                    </label>
-                    <div>
-                        <button class="btn btn-primary w-100" onclick=selectHotel()>확인</button>
-                    </div>
-                </th:block>
+                <form action="/admin/modifyRoom" method="get" th:if="${hotelName == null}">
+                    <label for="hotelSelect">호텔을 선택해 주세요</label>
+                    <select class="form-select" id="hotelSelect" name="hotelName">
+                        <th:block th:each="hotel : ${hotelList}">
+                            <option th:value="${hotel}" th:text="${hotel}"></option>
+                        </th:block>
+                    </select>
+                    <button class="btn btn-primary w-100">확인</button>
+                </form>
 
-                <th:block th:if="${hotelName != null and roomKind == null}">
-                    <label>
-                        <span class="text">객실을 선택해 주세요</span>
-                        <select class="form-select" id="roomSelect">
-                            <th:block th:each="room : ${roomList}">
-                                <option th:value="${room}" th:text="${room}"></option>
-                            </th:block>
-                        </select>
-                    </label>
-                    <div>
-                        <button class="btn btn-primary w-100" onclick=selectRoom()>확인</button>
-                    </div>
-                </th:block>
+                <form action="/admin/modifyRoom" method="get" th:if="${hotelName != null and roomKind == null}">
+                    <input type="hidden" name="hotelName" th:value="${hotelName}">
+                    <label for="roomSelect">객실을 선택해 주세요</label>
+                    <select class="form-select" id="roomSelect" name="roomKind">
+                        <th:block th:each="room : ${roomList}">
+                            <option th:value="${room}" th:text="${room}"></option>
+                        </th:block>
+                    </select>
+                    <button class="btn btn-primary w-100">확인</button>
+                </form>
 
-                <th:block th:if="${hotelName != null && roomKind != null}">
-                    <div class="modify-room-container">
-                        <section class="room-img-section">
-                            <div>
-                                <span>대표 이미지</span>
-                                <div class="upload-box" id="mainUploadBox">
-                                    <div class="plus">+</div>
-                                </div>
-                                <span>PREVIEW</span>
-                                <ul class="preview" id="mainPreview">
-                                    <li class="item">
-                                        <input hidden type="text" class="existing-file-name" id="existingMainFileName"
-                                               th:value="${roomMainFile.fileName}">
-                                        <img th:src="@{${roomMainFile.dir} + ${roomMainFile.fileName}}"
-                                             alt="">
-                                        <a class="btn btn-secondary delete-btn">삭제</a>
-                                    </li>
-                                </ul>
+                <div class="modify-room-container" th:if="${hotelName != null && roomKind != null}">
+                    <section class="room-img-section">
+                        <div>
+                            <span>대표 이미지</span>
+                            <div class="upload-box" id="mainUploadBox">
+                                <div class="plus">+</div>
+                            </div>
+                            <span>PREVIEW</span>
+                            <ul class="preview" id="mainPreview">
+                                <li class="item">
+                                    <input hidden type="text" class="existing-file-name" id="existingMainFileName"
+                                           th:value="${roomMainFile.fileName}">
+                                    <img th:src="@{${roomMainFile.dir} + ${roomMainFile.fileName}}"
+                                         alt="">
+                                    <button type="button" class="btn btn-secondary ms-2 text-nowrap delete-btn">삭제</button>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <span>추가 이미지</span>
+                            <div class="upload-box" id="additionalUploadBox">
+                                <div class="plus">+</div>
+                            </div>
+                            <span>PREVIEW</span>
+                            <ul class="preview" id="additionalPreview">
+                                <li class="item" th:each="file : ${roomFileList}">
+                                    <input hidden type="text" class="existing-file-name"
+                                           id="existingAdditionalFileName"
+                                           th:value="${file.fileName}">
+                                    <img th:src="@{${file.dir} + ${file.fileName}}" alt="">
+                                    <button type="button" class="btn btn-secondary ms-2 text-nowrap delete-btn">삭제</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="room-info-section">
+                        <form id="modifyRoomForm">
+                            <input hidden name="roomId" type="text" th:value="${roomMainFile.room.id}">
+                            <input hidden name="currentKind" class="form-control"
+                                   th:value="${roomMainFile.room.kind}" required>
+                            <label for="kind">객실 종류</label>
+                            <div class="row-container">
+                                <input name="kind" id="kind" class="form-control" th:value="${roomMainFile.room.kind}"
+                                       required>
+                                <button type="button" class="btn btn-secondary w-50 ms-2" name="confirmRoomKindDuplicationBtn">중복
+                                    확인
+                                </button>
                             </div>
                             <div>
-                                <span>추가 이미지</span>
-                                <div class="upload-box" id="additionalUploadBox">
-                                    <div class="plus">+</div>
-                                </div>
-                                <span>PREVIEW</span>
-                                <ul class="preview" id="additionalPreview">
-                                    <li class="item" th:each="file : ${roomFileList}">
-                                        <input hidden type="text" class="existing-file-name" id="existingAdditionalFileName"
-                                               th:value="${file.fileName}">
-                                        <img th:src="@{${file.dir} + ${file.fileName}}" alt="">
-                                        <a class="btn btn-secondary delete-btn">삭제</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </section>
-
-                        <section class="room-info-section">
-                            <form id="modifyRoomForm">
-                                <input hidden name="roomId" type="text" th:value="${roomMainFile.room.id}">
-                                <input hidden name="currentKind" class="form-control"
-                                       th:value="${roomMainFile.room.kind}" required>
-                                <label>객실 종류</label>
+                                <label for="checkin">체크인</label>
                                 <div class="row-container">
-                                    <input name="kind" class="form-control" th:value="${roomMainFile.room.kind}"
-                                           required>
-                                    <a onclick="confirmDuplication()" class="btn btn-secondary confirm-duplication-btn">중복
-                                        확인</a>
-                                </div>
-                                <div>
-                                    <label>체크인</label>
-                                    <div class="row-container">
-                                        <input name="checkinHour" class="form-control" th:value="${checkinHour}"
-                                               type="text"
-                                               required> :
-                                        <input name="checkinMinute" class="form-control" th:value="${checkinMinute}"
-                                               type="text"
-                                               required>
-                                    </div>
-                                </div>
-                                <div>
-                                    <label>체크아웃</label>
-                                    <div class="row-container">
-                                        <input name="checkoutHour" class="form-control" th:value="${checkoutHour}"
-                                               type="text"
-                                               required> :
-                                        <input name="checkoutMinute" class="form-control" th:value="${checkoutMinute}"
-                                               type="text"
-                                               required>
-                                    </div>
-                                </div>
-                                <div>
-                                    <label>금요일 가격</label>
-                                    <input name="fridayPrice" class="form-control"
-                                           th:value="${roomMainFile.room.fridayPrice}" required>
-                                </div>
-                                <div>
-                                    <label>토요일 가격</label>
-                                    <input name="saturdayPrice" class="form-control"
-                                           th:value="${roomMainFile.room.saturdayPrice}" required>
-                                </div>
-                                <div>
-                                    <label>주중 가격</label>
-                                    <input name="weekdayPrice" class="form-control"
-                                           th:value="${roomMainFile.room.weekdayPrice}" required>
-                                </div>
-                                <div>
-                                    <label>기준 인원</label>
-                                    <input name="standardPeople" class="form-control"
-                                           th:value="${roomMainFile.room.standardPeople}" required>
-                                </div>
-                                <div>
-                                    <label>최대 인원</label>
-                                    <input name="maximumPeople" class="form-control"
-                                           th:value="${roomMainFile.room.maximumPeople}" required>
-                                </div>
-                                <div>
-                                    <label>객실 개수</label>
-                                    <input name="count" class="form-control" th:value="${roomMainFile.room.count}"
+                                    <input name="checkinHour" id="checkin" class="form-control" th:value="${checkinHour}"
+                                           type="text"
+                                           required> :
+                                    <input name="checkinMinute" class="form-control" th:value="${checkinMinute}"
+                                           type="text"
                                            required>
                                 </div>
-                                <div>
-                                    <button class="btn btn-primary w-100"
-                                    name="modifyRoomBtn">수정</button>
-                                    <button class="btn btn-primary w-100" name="deleteRoomBtn">삭제</button>
+                            </div>
+                            <div>
+                                <label for="checkout">체크아웃</label>
+                                <div class="row-container">
+                                    <input name="checkoutHour" id="checkout" class="form-control" th:value="${checkoutHour}"
+                                           type="text"
+                                           required> :
+                                    <input name="checkoutMinute" class="form-control" th:value="${checkoutMinute}"
+                                           type="text"
+                                           required>
                                 </div>
-                            </form>
-                        </section>
-                    </div>
-                </th:block>
+                            </div>
+                            <div>
+                                <label for="fridayPrice">금요일 가격</label>
+                                <input name="fridayPrice" id="fridayPrice" class="form-control"
+                                       th:value="${roomMainFile.room.fridayPrice}" required>
+                            </div>
+                            <div>
+                                <label for="saturdayPrice">토요일 가격</label>
+                                <input name="saturdayPrice" id="saturdayPrice" class="form-control"
+                                       th:value="${roomMainFile.room.saturdayPrice}" required>
+                            </div>
+                            <div>
+                                <label for="weekdayPrice">주중 가격</label>
+                                <input name="weekdayPrice" id="weekdayPrice" class="form-control"
+                                       th:value="${roomMainFile.room.weekdayPrice}" required>
+                            </div>
+                            <div>
+                                <label for="standardPeople">기준 인원</label>
+                                <input name="standardPeople" id="standardPeople" class="form-control"
+                                       th:value="${roomMainFile.room.standardPeople}" required>
+                            </div>
+                            <div>
+                                <label for="maximumPeople">최대 인원</label>
+                                <input name="maximumPeople" id="maximumPeople" class="form-control"
+                                       th:value="${roomMainFile.room.maximumPeople}" required>
+                            </div>
+                            <div>
+                                <label for="count">객실 개수</label>
+                                <input name="count" id="count" class="form-control" th:value="${roomMainFile.room.count}"
+                                       required>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary w-100"
+                                        name="modifyRoomBtn">수정
+                                </button>
+                                <button class="btn btn-primary w-100" name="deleteRoomBtn">삭제</button>
+                            </div>
+                        </form>
+                    </section>
+                </div>
             </div>
         </div>
     </div>
