--- a/src/main/resources/templates/admin/modifyHotel.html
+++ b/src/main/resources/templates/admin/modifyHotel.html
@@ -77,18 +77,16 @@
 
                     <section class="hotel-info-section">
                         <form id="modifyHotelForm">
+                            <input hidden name="region" id="region" class="form-control"
+                                   th:value="${hotel.region}" type="text">
                             <div>
-                                <label>호텔 이름</label>
-                                <input disabled name="hotelName" class="form-control" th:value="${hotel.hotelName}"
+                                <label for="hotelName">호텔 이름</label>
+                                <input disabled name="hotelName" id="hotelName" class="form-control" th:value="${hotel.hotelName}"
                                        required>
                             </div>
                             <div>
-                                <input hidden name="region" id="region" class="form-control"
-                                       th:value="${hotel.region}" type="text">
-                            </div>
-                            <div>
                                 <div>
-                                    <label>우편번호</label>
+                                    <label for="zipcode">우편번호</label>
                                     <div class="row-container">
                                         <input disabled class="form-control" name="zipcode" id="zipcode"
                                                th:value="${hotel.zipcode}"/>
@@ -98,27 +96,27 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <label>주소</label>
+                                    <label for="addr1">주소</label>
                                     <input class="form-control" name="addr1" id="addr1" th:value="${hotel.addr1}"/>
                                 </div>
                                 <div>
-                                    <label>상세주소</label>
+                                    <label for="addr2">상세주소</label>
                                     <input class="form-control" name="addr2" id="addr2" placeholder="상세 주소"
                                            th:value="${hotel.addr2}">
                                 </div>
                             </div>
                             <div>
-                                <label>연락처</label>
-                                <input name="contactInfo" class="form-control"
+                                <label for="contactInfo">연락처</label>
+                                <input name="contactInfo" id="contactInfo" class="form-control"
                                        th:value="${hotel.contactInfo}" required>
                             </div>
                             <div>
-                                <label>호텔 소개</label>
-                                <input name="hotelDetails" class="form-control" th:value="${hotel.hotelDetails}">
+                                <label for="hotelDetails">호텔 소개</label>
+                                <input name="hotelDetails" id="hotelDetails" class="form-control" th:value="${hotel.hotelDetails}">
                             </div>
                             <div>
-                                <button class="btn btn-primary w-100" name="modifyHotelBtn">수정</button>
-                                <button class="btn btn-primary w-100" name="deleteHotelBtn">삭제</button>
+                                <button class="btn btn-primary w-100" name="modifyHotelBtn" value="modify">수정</button>
+                                <button class="btn btn-primary w-100" name="deleteHotelBtn" value="delete">삭제</button>
                             </div>
                         </form>
                     </section>
