--- a/src/main/resources/templates/admin/registerHotel.html
+++ b/src/main/resources/templates/admin/registerHotel.html
@@ -32,74 +32,68 @@
                     <h1 class="title">호텔 관리 > 호텔 등록</h1>
                 </div>
                 <div class="register-hotel-container">
-                    <section class="hotel_img_block">
-                        <div class="main-image-container">
-                            <span class="text">대표 이미지</span>
-                            <div class="main-img">
-                                <div class="upload-box main-upload-box" >
-                                    <div class="plus">+</div>
-                                </div>
+                    <section class="hotel-img-section">
+                        <div>
+                            <span>대표 이미지</span>
+                            <div class="upload-box" id="mainUploadBox">
+                                <div class="plus">+</div>
                             </div>
-                            <div class="preview_img_block">
-                                <label>PREVIEW</label>
-                                <ul class="preview" id="mainPreview"></ul>
-                            </div>
+                            <label>PREVIEW</label>
+                            <ul class="preview" id="mainPreview"></ul>
                         </div>
 
-                        <div class="hotel-image-container">
-                            <span class="text hotel-image">호텔 이미지</span>
-                            <div class="hotel-img">
-                                <div class="upload-box hotel-upload-box">
-                                    <div class="plus">+</div>
-                                </div>
+                        <div>
+                            <span>추가 이미지</span>
+                            <div class="upload-box" id="additionalUploadBox">
+                                <div class="plus">+</div>
                             </div>
-                            <div class="preview_img_block">
-                                <label>PREVIEW</label>
-                                <ul class="preview" id="hotelPreview"></ul>
-                            </div>
+                            <label>PREVIEW</label>
+                            <ul class="preview" id="additionalPreview"></ul>
                         </div>
                     </section>
 
-                    <section class="hotel_info_block">
-                        <form class="hotel-form" id="hotelForm">
-                            <label>호텔 이름</label>
+                    <section class="hotel-info-section">
+                        <form id="registerHotelForm">
+                            <input type="hidden" name="region" id="region" class="form-control">
+                            <label for="hotelName">호텔 이름</label>
                             <div class="row-container">
-                                <input name="hotelName" class="hotel-name form-control" placeholder="호텔 이름(특수문자 불가능)" required>
-                                 <a onclick="confirmDuplication()" class="btn btn-secondary confirm-duplication-btn">중복 확인</a>
-                            </div>
-                            <div>
-                                <input hidden name="region" id="region" class="form-control" placeholder="지역" type="text">
+                                <input name="hotelName" id="hotelName" class="form-control" placeholder="호텔 이름(특수문자 불가능)"
+                                       required>
+                                <button type="button" class="btn btn-secondary w-50 ms-2" name="confirmHotelNameDuplicationBtn">중복
+                                    확인
+                                </button>
                             </div>
                             <div>
                                 <div>
-                                    <label>우편번호</label>
+                                    <label for="zipcode">우편번호</label>
                                     <div class="row-container">
                                         <input disabled class="form-control" name="zipcode" id="zipcode"
                                                placeholder="우편번호"/>
-                                        <a onclick="AddressSearch()" class="btn btn-secondary search-addr-btn">우편번호
-                                            찾기</a>
+                                        <button type="button" class="btn btn-secondary w-50" name="searchAddressBtn">
+                                            우편번호 찾기
+                                        </button>
                                     </div>
                                 </div>
                                 <div>
-                                    <label>주소</label>
+                                    <label for="addr1">주소</label>
                                     <input class="form-control" name="addr1" id="addr1" placeholder="주소"/>
                                 </div>
                                 <div>
-                                    <label>상세주소</label>
+                                    <label for="addr2">상세주소</label>
                                     <input class="form-control" name="addr2" id="addr2" placeholder="상세주소">
                                 </div>
                             </div>
                             <div>
-                                <label>연락처</label>
-                                <input name="contactInfo" class="form-control"
+                                <label for="contactInfo">연락처</label>
+                                <input name="contactInfo" id="contactInfo" class="form-control"
                                        placeholder="000-0000-0000 또는 000-000-0000" required>
                             </div>
                             <div>
-                                <label>호텔 소개</label>
-                                <input name="hotelDetails" class="form-control" placeholder="호텔 소개" required>
+                                <label for="hotelDetails">호텔 소개</label>
+                                <input name="hotelDetails" id="hotelDetails" class="form-control" placeholder="호텔 소개" required>
                             </div>
                             <div>
-                                <button class="btn btn-primary add_hotel_btn w-100">등록</button>
+                                <button class="btn btn-primary w-100">등록</button>
                             </div>
                         </form>
                     </section>
