--- a/src/main/resources/templates/admin/registerRoom.html
+++ b/src/main/resources/templates/admin/registerRoom.html
@@ -31,107 +31,93 @@
                 <div class="title-container">
                     <h1 class="title">호텔 관리 > 객실 등록</h1>
                 </div>
-                <div th:if="${hotelName == null}">
-                    <label>
-                        <span class="text">호텔을 선택해 주세요</span>
-                        <select class="form-select hotel-list">
-                            <th:block th:each="hotel : ${hotelList}">
-                                <option th:value="${hotel}" th:text="${hotel}"></option>
-                            </th:block>
-                        </select>
-                    </label>
-                    <div>
-                        <button class="btn btn-primary select-hotel-btn w-100" onclick = selectedHotel()>확인</button>
-                    </div>
-                </div>
+                <form action="/admin/registerRoom" method="get" th:if="${hotelName == null}">
+                    <label for="hotelSelect">호텔을 선택해 주세요</label>
+                    <select class="form-select" id="hotelSelect" name="hotelName">
+                        <th:block th:each="hotel : ${hotelList}">
+                            <option th:value="${hotel}" th:text="${hotel}"></option>
+                        </th:block>
+                    </select>
+                    <button class="btn btn-primary w-100">확인</button>
+                </form>
 
-                <div th:if="${hotelName != null}">
-                    <span class="text" th:text="${hotelName}"></span>
-                    <div class="register-room-container">
-                        <section class="room_img_block">
-                            <div class="main-image-container">
-                                <span class="text">대표 이미지</span>
-                                <div class="main-img">
-                                    <div class="upload-box main-upload-box" >
-                                        <div class="plus">+</div>
-                                    </div>
-                                </div>
-                                <div class="preview_img_block">
-                                    <label>PREVIEW</label>
-                                    <ul class="preview" id="mainPreview"></ul>
-                                </div>
+                <div class="register-room-container" th:if="${hotelName != null}">
+                    <section class="room-img-section">
+                        <div>
+                            <span>대표 이미지</span>
+                            <div class="upload-box" id="mainUploadBox">
+                                <div class="plus">+</div>
                             </div>
-
-                            <div class="room-image-container">
-                                <span class="text room-image">객실 이미지</span>
-                                <div class="room-img">
-                                    <div class="upload-box room-upload-box">
-                                        <div class="plus">+</div>
-                                    </div>
-                                </div>
-                                <div class="preview_img_block">
-                                    <label>PREVIEW</label>
-                                    <ul class="preview" id="roomPreview"></ul>
-                                </div>
+                            <span>PREVIEW</span>
+                            <ul class="preview" id="mainPreview"></ul>
+                        </div>
+                        <div>
+                            <span>추가 이미지</span>
+                            <div class="upload-box" id="additionalUploadBox">
+                                <div class="plus">+</div>
                             </div>
-                        </section>
+                            <span>PREVIEW</span>
+                            <ul class="preview" id="additionalPreview"></ul>
+                        </div>
+                    </section>
 
-                        <section class="room_info_block">
-                            <form class="room-form" id="roomForm">
-                                <input hidden name="hotelName" type="text" th:value="${hotelName}">
-                                <label>객실 종류</label>
+                    <section class="room-info-section">
+                        <form id="registerRoomForm">
+                            <input hidden name="hotelName" type="text" th:value="${hotelName}">
+                            <label for="kind">객실 종류</label>
+                            <div class="row-container">
+                                <input name="kind" id="kind" class="form-control" placeholder="객실 종류" required>
+                                <button type="button" class="btn btn-secondary w-50 ms-2" name="confirmRoomKindDuplicationBtn">중복
+                                    확인
+                                </button>
+                            </div>
+                            <div>
+                                <label for="checkin">체크인</label>
                                 <div class="row-container">
-                                    <input name="kind" class="form-control" placeholder="객실 종류" required>
-                                    <a onclick="confirmDuplication()" class="btn btn-secondary confirm-duplication-btn">중복 확인</a>
+                                    <input name="checkinHour" id="checkin" class="form-control" placeholder="0~23" type="text"
+                                           required> :
+                                    <input name="checkinMinute" class="form-control" placeholder="0~59" type="text"
+                                           required>
                                 </div>
-                                <div>
-                                    <label>체크인</label>
-                                    <div class="row-container">
-                                        <input name="checkinHour" class="form-control" placeholder="0~23" type="text"
-                                               required> :
-                                        <input name="checkinMinute" class="form-control" placeholder="0~59" type="text"
-                                               required>
-                                    </div>
+                            </div>
+                            <div>
+                                <label for="checkout">체크아웃</label>
+                                <div class="row-container">
+                                    <input name="checkoutHour" id="checkout" class="form-control" placeholder="0~23" type="text"
+                                           required> :
+                                    <input name="checkoutMinute" class="form-control" placeholder="0~59" type="text"
+                                           required>
                                 </div>
-                                <div>
-                                    <label>체크아웃</label>
-                                    <div class="row-container">
-                                        <input name="checkoutHour" class="form-control" placeholder="0~23" type="text"
-                                               required> :
-                                        <input name="checkoutMinute" class="form-control" placeholder="0~59" type="text"
-                                               required>
-                                    </div>
-                                </div>
-                                <div>
-                                    <label>금요일 가격</label>
-                                    <input name="fridayPrice" class="form-control" placeholder="금요일 가격" required>
-                                </div>
-                                <div>
-                                    <label>토요일 가격</label>
-                                    <input name="saturdayPrice" class="form-control" placeholder="토요일 가격" required>
-                                </div>
-                                <div>
-                                    <label>주중 가격</label>
-                                    <input name="weekdayPrice" class="form-control" placeholder="주중 가격" required>
-                                </div>
-                                <div>
-                                    <label>기준 인원</label>
-                                    <input name="standardPeople" class="form-control" placeholder="기준 인원" required>
-                                </div>
-                                <div>
-                                    <label>최대 인원</label>
-                                    <input name="maximumPeople" class="form-control" placeholder="최대 인원" required>
-                                </div>
-                                <div>
-                                    <label>객실 개수</label>
-                                    <input name="count" class="form-control" placeholder="객실 개수" required>
-                                </div>
-                                <div>
-                                    <button class="btn btn-primary add_room_btn w-100">등록</button>
-                                </div>
-                            </form>
-                        </section>
-                    </div>
+                            </div>
+                            <div>
+                                <label for="fridayPrice">금요일 가격</label>
+                                <input name="fridayPrice" id="fridayPrice" class="form-control" placeholder="금요일 가격" required>
+                            </div>
+                            <div>
+                                <label for="saturdayPrice">토요일 가격</label>
+                                <input name="saturdayPrice" id="saturdayPrice" class="form-control" placeholder="토요일 가격" required>
+                            </div>
+                            <div>
+                                <label for="weekdayPrice">주중 가격</label>
+                                <input name="weekdayPrice" id="weekdayPrice" class="form-control" placeholder="주중 가격" required>
+                            </div>
+                            <div>
+                                <label for="standardPeople">기준 인원</label>
+                                <input name="standardPeople" id="standardPeople" class="form-control" placeholder="기준 인원" required>
+                            </div>
+                            <div>
+                                <label for="maximumPeople">최대 인원</label>
+                                <input name="maximumPeople" id="maximumPeople" class="form-control" placeholder="최대 인원" required>
+                            </div>
+                            <div>
+                                <label for="count">객실 개수</label>
+                                <input name="count" id="count" class="form-control" placeholder="객실 개수" required>
+                            </div>
+                            <div>
+                                <button class="btn btn-primary w-100">등록</button>
+                            </div>
+                        </form>
+                    </section>
                 </div>
             </div>
         </div>
