--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -32,18 +32,17 @@
 
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
-        <div class="title-container">
-            <h1 class="title">로그인</h1>
-        </div>
+        <h1 class="title">로그인</h1>
         <form action="/user/login" method="post">
             <div class="form-login">
                 <label class="form-label">아이디</label>
                 <input name="username" class="form-control" placeholder="로그인"/> <br/>
             </div>
             <div class="form-login">
-                <label class="form-label">비밀 번호</label>
+                <label class="form-label">비밀번호</label>
                 <input name="password" type="password" class="form-control" placeholder="비밀번호"/> <br/>
             </div>
+            <div th:text="${param.error}" class="form-login"></div>
             <div class="form-option">
                 <div class="form-remember">
                     <input type="checkbox" name="remember-me" id="remember-me" class="form-check-input"/>
@@ -63,13 +62,18 @@
             </div>
         </form>
         <div class="form-oauth2">
-            <button onclick="location.href='/oauth2/authorization/kakao'" class="oauth2-btn">카카오로 로그인</button>
-            <button onclick="location.href='/oauth2/authorization/google'" class="oauth2-btn">구글로 로그인</button>
+            <button onclick="location.href='/oauth2/authorization/kakao'" class="oauth2-btn kakao">
+                <img src="/images/kakao-icon.png" alt="">
+                <span>카카오로 로그인</span>
+            </button>
+            <button onclick="location.href='/oauth2/authorization/google'" class="oauth2-btn google">
+                <img src="/images/google-icon.png" alt="">
+                <span>구글로 로그인</span>
+            </button>
         </div>
         <div class="form-login">
             <button onclick="location.href='/user/join'" class="register_btn">회원가입</button>
         </div>
-        <div th:text="${param.error}" class="form-login"></div>
     </div>
 </main>
 
