비밀번호 찾기 sequence diagram 추가

--- a/src/main/resources/templates/user/findPw.html
+++ b/src/main/resources/templates/user/findPw.html
@@ -36,7 +36,7 @@
         <input name="emailCode" id="emailCode" placeholder="인증코드"> <br/>
     </div>
     <div>
-        <button type="button" onclick="isValid()">아이디 찾기</button>
+        <button type="button" onclick="isValid()">비밀번호 찾기</button>
     </div>
 </div>
 
